# Twin-64

./: .gitignore  CMakeLists.txt  Instruction Set - Twin64.numbers  README.md
Instruction Sheet/: Instruction Set - Twin64.numbers
T64 - Verilog Notes/: Twin-64-Cpu.v
T64-Book/: README.md  T64-Book.tex  packages.tex  styles.tex
T64-Book/chapter-instruction-set/: section-instruction-ADD.tex  section-instruction-formats.tex  section-instruction-overview.tex
T64-Book/chapters/Introduction/: T64-Introduction.tex
Temp Stuff/: T64-MonVersion.h
Twin-64 Emulator/: T64-Cpu.cpp  T64-Cpu.h  T64-InlineAsm.cpp  T64-InlineAsm.h  T64-InlineDisAsm.cpp  T64-Io-Mem.cpp  T64-Io-Mem.h
Twin-64 Emulator.xcodeproj/project.xcworkspace/xcuserdata/helmutfieres.xcuserdatad/: UserInterfaceState.xcuserstate
Twin-64 Emulator.xcodeproj/xcuserdata/helmutfieres.xcuserdatad/xcschemes/: xcschememanagement.plist
Twin-64 Emulator/Twin-64 Emulator/: T64-Cpu.cpp  T64-Cpu.h  T64-DisAsm.cpp  T64-InlineAsm.cpp  T64-InlineAsm.h  T64-InlineDisAsm.cpp  T64-Io-Mem.cpp  T64-Io-Mem.h  T64-LineAsm.cpp  T64-OneLineAsm.cpp  T64-Phys-Mem.cpp  T64-Phys-Mem.h  T64-Types.h  main.cpp
Twin-64 Emulator/Twin-64 Emulator.xcodeproj/: project.pbxproj
Twin-64 Emulator/Twin-64 Emulator.xcodeproj/project.xcworkspace/xcuserdata/helmutfieres.xcuserdatad/: UserInterfaceState.xcuserstate
Twin-64 Emulator/Twin-64 Emulator.xcodeproj/xcuserdata/helmutfieres.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Twin64 - Instruction Sheet/: Instruction Set - Twin64.numbers
Twin64-Asmtest/: CMakeLists.txt  main.cpp
Twin64-Instruction-Sheet/: Twin64-Instruction-Set.numbers
Twin64-Libraries/Twin64-Common/: CMakeLists.txt  T64-Common.h  T64-Util.cpp  T64-Util.h
Twin64-Libraries/Twin64-ConsoleIO/: CMakeLists.txt  T64-ConsoleIO.cpp  T64-ConsoleIO.h
Twin64-Libraries/Twin64-InlineAsm/: CMakeLists.txt  T64-InlineAsm.cpp  T64-InlineAsm.h  T64-InlineDisAsm.cpp
Twin64-Libraries/Twin64-Memory/: CMakeLists.txt  T64-Memory.cpp  T64-Memory.h  T64-Phys-Mem.cpp
Twin64-Libraries/Twin64-Module/: CMakeLists.txt  T64-Module.cpp  T64-Module.h
Twin64-Libraries/Twin64-Processor/: CMakeLists.txt  T64-Cache.cpp  T64-Cpu.cpp  T64-Cpu.h  T64-Io-Mem.cpp  T64-Phys-Mem.cpp  T64-Processor.cpp  T64-Processor.h  T64-TLB.cpp
Twin64-Libraries/Twin64-System/: CMakeLists.txt  T64-Module.cpp  T64-System.cpp  T64-System.h
Twin64-Monitor/: CMakeLists.txt  main.cpp
Twin64-SPL/: CMakeLists.txt  Grammar.md  T64-SplAST.cpp  T64-SplCodeGen.cpp  T64-SplConfig.cpp  T64-SplDeclarations.h  T64-SplParser.cpp  T64-SplSymtab.cpp  T64-SplTables.h  T64-SplTokenizer.cpp  T64-SplVersion.h  main.cpp
Twin64-Simulator/: CMakeLists.txt  T64-SimConfig.cpp  T64-SimDeclarations.h  T64-SimEnvVars.cpp  T64-SimExprEvaluator.cpp  T64-SimExprFunctions.cpp  T64-SimTables.h  T64-SimTokenizer.cpp  T64-SimVersion.h  T64-SimWinBaseClasses.cpp  T64-SimWinClasses.cpp  T64-SimWinCmd.cpp  T64-SimWinDisplay.cpp  T64-SimWinElfFileCmd.cpp  VCPU32-SimEnvVars.cpp  VCPU32-SimWinBaseClasses.cpp  VCPU32-SimWinClasses.cpp  main.cpp
gitHooks/: pre-commit  update-patch-level.py
scripts/: Clean-Git-DS_Store.sh
